[gd_scene load_steps=77 format=3 uid="uid://c4kqxardye58q"]

[ext_resource type="Script" uid="uid://dcmg4jautpp6a" path="res://scenes/hero/player.gd" id="1_3li8b"]
[ext_resource type="Texture2D" uid="uid://ccjapvn2jpagq" path="res://art/Factions/Knights/Troops/Warrior/Purple/Warrior_Purple.png" id="1_4kcxx"]
[ext_resource type="Texture2D" uid="uid://creesiop4alpf" path="res://art/Effects/Explosion/Explosions.png" id="3_h822q"]
[ext_resource type="PackedScene" uid="uid://b3yq1bsqorpq" path="res://scenes/FX/Fire.tscn" id="4_2crnb"]
[ext_resource type="Script" uid="uid://cdbicm6s5jqyb" path="res://inventory/inventory.gd" id="4_cw2d6"]
[ext_resource type="AudioStream" uid="uid://io4tvoxefi7r" path="res://sound/SFX/07_human_atk_sword_1.wav" id="4_qu4a1"]
[ext_resource type="AudioStream" uid="uid://dfe3r2muhfcar" path="res://sound/SFX/07_human_atk_sword_2.wav" id="5_70d11"]
[ext_resource type="AudioStream" uid="uid://d3lvvml11xm32" path="res://sound/SFX/10_human_special_atk_2.wav" id="6_6mvoa"]
[ext_resource type="AudioStream" uid="uid://cvujt5wi0xwkh" path="res://sound/SFX/17_orc_atk_sword_3.wav" id="7_6mvoa"]
[ext_resource type="AudioStream" uid="uid://bnwpvyq4c3wkd" path="res://sound/SFX/01_chest_open_3.wav" id="7_bruh7"]
[ext_resource type="AudioStream" uid="uid://dogkvyqf0s34a" path="res://sound/SFX/04_sack_open_2.wav" id="8_6eyey"]
[ext_resource type="Script" uid="uid://1kc3agbiw7da" path="res://inventory/inventory_ui.gd" id="8_bruh7"]
[ext_resource type="Texture2D" uid="uid://d010jcospqex4" path="res://art/UI/Banners/Carved_9Slides.png" id="9_bruh7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6iful"]
atlas = ExtResource("1_4kcxx")
region = Rect2(0, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qguj2"]
atlas = ExtResource("1_4kcxx")
region = Rect2(192, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dorm"]
atlas = ExtResource("1_4kcxx")
region = Rect2(384, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejplr"]
atlas = ExtResource("1_4kcxx")
region = Rect2(576, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8g2k"]
atlas = ExtResource("1_4kcxx")
region = Rect2(768, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_bp8o8"]
atlas = ExtResource("1_4kcxx")
region = Rect2(960, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_kktmi"]
atlas = ExtResource("1_4kcxx")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3g4la"]
atlas = ExtResource("1_4kcxx")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5idg"]
atlas = ExtResource("1_4kcxx")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_temqh"]
atlas = ExtResource("1_4kcxx")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1kji"]
atlas = ExtResource("1_4kcxx")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_plq2s"]
atlas = ExtResource("1_4kcxx")
region = Rect2(960, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_srp4u"]
atlas = ExtResource("1_4kcxx")
region = Rect2(0, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfpux"]
atlas = ExtResource("1_4kcxx")
region = Rect2(192, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_61ith"]
atlas = ExtResource("1_4kcxx")
region = Rect2(384, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebwui"]
atlas = ExtResource("1_4kcxx")
region = Rect2(576, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfy4j"]
atlas = ExtResource("1_4kcxx")
region = Rect2(768, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv3ic"]
atlas = ExtResource("1_4kcxx")
region = Rect2(960, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6eyey"]
atlas = ExtResource("1_4kcxx")
region = Rect2(0, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3wef"]
atlas = ExtResource("1_4kcxx")
region = Rect2(192, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4126"]
atlas = ExtResource("1_4kcxx")
region = Rect2(384, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkdrv"]
atlas = ExtResource("1_4kcxx")
region = Rect2(576, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7iby"]
atlas = ExtResource("1_4kcxx")
region = Rect2(768, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rnld"]
atlas = ExtResource("1_4kcxx")
region = Rect2(960, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8lor"]
atlas = ExtResource("1_4kcxx")
region = Rect2(0, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e537"]
atlas = ExtResource("1_4kcxx")
region = Rect2(192, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_p07f3"]
atlas = ExtResource("1_4kcxx")
region = Rect2(384, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_viqgg"]
atlas = ExtResource("1_4kcxx")
region = Rect2(576, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgkxt"]
atlas = ExtResource("1_4kcxx")
region = Rect2(768, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsi7p"]
atlas = ExtResource("1_4kcxx")
region = Rect2(960, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jpwa"]
atlas = ExtResource("1_4kcxx")
region = Rect2(0, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfeki"]
atlas = ExtResource("1_4kcxx")
region = Rect2(192, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_axnmu"]
atlas = ExtResource("1_4kcxx")
region = Rect2(384, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvsjc"]
atlas = ExtResource("1_4kcxx")
region = Rect2(576, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxdpb"]
atlas = ExtResource("1_4kcxx")
region = Rect2(768, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_agngo"]
atlas = ExtResource("1_4kcxx")
region = Rect2(960, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3s6ie"]
atlas = ExtResource("1_4kcxx")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lp1gb"]
atlas = ExtResource("1_4kcxx")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_gakjh"]
atlas = ExtResource("1_4kcxx")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_35g3x"]
atlas = ExtResource("1_4kcxx")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0ltp"]
atlas = ExtResource("1_4kcxx")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ki4b6"]
atlas = ExtResource("1_4kcxx")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdl7e"]
atlas = ExtResource("1_4kcxx")
region = Rect2(0, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qu4a1"]
atlas = ExtResource("1_4kcxx")
region = Rect2(192, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_70d11"]
atlas = ExtResource("1_4kcxx")
region = Rect2(384, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_cw2d6"]
atlas = ExtResource("1_4kcxx")
region = Rect2(0, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_khinc"]
atlas = ExtResource("1_4kcxx")
region = Rect2(192, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_bruh7"]
atlas = ExtResource("1_4kcxx")
region = Rect2(384, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdt6c"]
atlas = ExtResource("1_4kcxx")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xu416"]
atlas = ExtResource("1_4kcxx")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddpwp"]
atlas = ExtResource("1_4kcxx")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lelm6"]
atlas = ExtResource("1_4kcxx")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7c74"]
atlas = ExtResource("1_4kcxx")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7aorl"]
atlas = ExtResource("1_4kcxx")
region = Rect2(960, 192, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_gp031"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6iful")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qguj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dorm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejplr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8g2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bp8o8")
}],
"loop": false,
"name": &"attack_1",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kktmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3g4la")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5idg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_temqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1kji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_plq2s")
}],
"loop": false,
"name": &"attack_2",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_srp4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfpux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61ith")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebwui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfy4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv3ic")
}],
"loop": false,
"name": &"attack_down_1",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6eyey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3wef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4126")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkdrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7iby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rnld")
}],
"loop": false,
"name": &"attack_down_2",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8lor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e537")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p07f3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_viqgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgkxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsi7p")
}],
"loop": false,
"name": &"attack_up_1",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jpwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfeki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axnmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvsjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxdpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agngo")
}],
"loop": false,
"name": &"attack_up_2",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkdrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7iby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7iby")
}],
"loop": false,
"name": &"dash_DOWN",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejplr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8g2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8g2k")
}],
"loop": false,
"name": &"dash_L&R",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvsjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxdpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxdpb")
}],
"loop": false,
"name": &"dash_UP",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3s6ie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lp1gb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gakjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35g3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0ltp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ki4b6")
}],
"loop": true,
"name": &"idle_L&R",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdl7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qu4a1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70d11")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cw2d6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khinc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bruh7")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdt6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xu416")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddpwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lelm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7c74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7aorl")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6eyey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3wef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4126")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6eyey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3wef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4126")
}],
"loop": false,
"name": &"shout_DOWN",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kktmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3g4la")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5idg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kktmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3g4la")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5idg")
}],
"loop": false,
"name": &"shout_L&R",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jpwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfeki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axnmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jpwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfeki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axnmu")
}],
"loop": false,
"name": &"shout_UP",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ixa2j"]
radius = 16.0
height = 32.0

[sub_resource type="AtlasTexture" id="AtlasTexture_2crnb"]
atlas = ExtResource("3_h822q")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2xcf"]
atlas = ExtResource("3_h822q")
region = Rect2(576, 0, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_6c5tw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2crnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2xcf")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_6mvoa"]
radius = 271.1494

[sub_resource type="CircleShape2D" id="CircleShape2D_khinc"]
radius = 16.0312

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3cqap"]
size = Vector2(94.0391, 76.125)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mdl7e"]
size = Vector2(101, 93.5)

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
collision_mask = 15
script = ExtResource("1_3li8b")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -2)
sprite_frames = SubResource("SpriteFrames_gp031")
animation = &"shout_UP"
autoplay = "idle_L&R"
frame = 5
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 9)
shape = SubResource("CapsuleShape2D_ixa2j")
debug_color = Color(0.540203, 0.567474, 3.85046e-07, 0.42)

[node name="Camera2D" type="Camera2D" parent="."]
rotation = -0.0004316583

[node name="Flames" type="Node2D" parent="."]
visible = false

[node name="Fire" type="AnimatedSprite2D" parent="Flames"]
process_mode = 4
position = Vector2(-69, -173)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_6c5tw")
autoplay = "default"
frame_progress = 0.9802131

[node name="Fire2" type="AnimatedSprite2D" parent="Flames"]
process_mode = 4
position = Vector2(-110, -39)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_6c5tw")
autoplay = "default"

[node name="Fire3" type="AnimatedSprite2D" parent="Flames"]
process_mode = 4
position = Vector2(19, -133)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_6c5tw")
autoplay = "default"

[node name="Fire4" type="AnimatedSprite2D" parent="Flames"]
process_mode = 4
position = Vector2(97, -46)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_6c5tw")
autoplay = "default"

[node name="Fire5" type="AnimatedSprite2D" parent="Flames"]
process_mode = 4
position = Vector2(-194, 41)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_6c5tw")
autoplay = "default"

[node name="Fire6" type="AnimatedSprite2D" parent="Flames"]
process_mode = 4
position = Vector2(-112, 148)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_6c5tw")
autoplay = "default"
frame_progress = 0.71660405

[node name="Fire7" type="AnimatedSprite2D" parent="Flames"]
process_mode = 4
position = Vector2(-11, 201)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_6c5tw")
autoplay = "default"

[node name="Fire8" type="AnimatedSprite2D" parent="Flames"]
process_mode = 4
position = Vector2(97, 157)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_6c5tw")
autoplay = "default"

[node name="Fire9" type="AnimatedSprite2D" parent="Flames"]
process_mode = 4
position = Vector2(172, 75)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_6c5tw")
autoplay = "default"
frame_progress = 0.5706276

[node name="Fire10" type="AnimatedSprite2D" parent="Flames"]
process_mode = 4
position = Vector2(-7, 101)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_6c5tw")
autoplay = "default"
frame_progress = 0.5706276

[node name="Fire11" type="AnimatedSprite2D" parent="Flames"]
process_mode = 4
position = Vector2(211, -21)
scale = Vector2(2, 2.0052083)
sprite_frames = SubResource("SpriteFrames_6c5tw")
autoplay = "default"
frame_progress = 0.5706276

[node name="Fire12" type="AnimatedSprite2D" parent="Flames"]
process_mode = 4
position = Vector2(-153, -79)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_6c5tw")
autoplay = "default"
frame_progress = 0.5706276

[node name="Fire15" parent="Flames" instance=ExtResource("4_2crnb")]
process_mode = 4
position = Vector2(97, -201)
scale = Vector2(2, 2)

[node name="Fire16" parent="Flames" instance=ExtResource("4_2crnb")]
process_mode = 4
position = Vector2(-163, 81)
scale = Vector2(2, 2)

[node name="Fire17" parent="Flames" instance=ExtResource("4_2crnb")]
process_mode = 4
position = Vector2(185, -161)
scale = Vector2(2, 2)

[node name="Fire18" parent="Flames" instance=ExtResource("4_2crnb")]
process_mode = 4
position = Vector2(67, 172)
scale = Vector2(2, 2)

[node name="Fire19" parent="Flames" instance=ExtResource("4_2crnb")]
process_mode = 4
position = Vector2(-94, -1)
scale = Vector2(2, 2)

[node name="Fire20" parent="Flames" instance=ExtResource("4_2crnb")]
process_mode = 4
position = Vector2(-162, -211)
scale = Vector2(2, 2)

[node name="Fire21" parent="Flames" instance=ExtResource("4_2crnb")]
process_mode = 4
position = Vector2(97, 22)
scale = Vector2(2, 2)

[node name="Fire22" parent="Flames" instance=ExtResource("4_2crnb")]
process_mode = 4
position = Vector2(27, -294)
scale = Vector2(2, 2)

[node name="SHOUT" type="Area2D" parent="."]
collision_mask = 14

[node name="Collision" type="CollisionShape2D" parent="SHOUT"]
shape = SubResource("CircleShape2D_6mvoa")
debug_color = Color(0.08235294, 0.65882355, 0.49803922, 0.41960785)

[node name="INV" type="Area2D" parent="."]
script = ExtResource("4_cw2d6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="INV"]
position = Vector2(3, 9)
shape = SubResource("CircleShape2D_khinc")

[node name="Area_L&R" type="Area2D" parent="."]
collision_mask = 14

[node name="CollisionLeft&Right" type="CollisionShape2D" parent="Area_L&R"]
position = Vector2(46.9804, 0)
shape = SubResource("RectangleShape2D_3cqap")
debug_color = Color(0.0806216, 0.167996, 0.49673, 0.42)

[node name="Area_U&D" type="Area2D" parent="."]
collision_mask = 14

[node name="CollisionUp&Down" type="CollisionShape2D" parent="Area_U&D"]
position = Vector2(0.5, -46.75)
shape = SubResource("RectangleShape2D_mdl7e")
debug_color = Color(0.946605, 0.174212, 0.39312, 0.42)

[node name="DashCooldown" type="Timer" parent="."]

[node name="ShoutCooldown" type="Timer" parent="."]

[node name="AudioStreamPlayerATK-1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_qu4a1")
volume_db = -4.0

[node name="AudioStreamPlayerATK-2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_70d11")
volume_db = -4.0

[node name="AudioStreamPlayerDASH" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_6mvoa")
volume_db = -4.0

[node name="AudioStreamPlayerSHOUT" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_6mvoa")
volume_db = 2.0
pitch_scale = 0.45

[node name="AudioStreamPlayerPickUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_bruh7")
volume_db = -4.0

[node name="AudioStreamPlayerUse" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_6eyey")
volume_db = -4.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InventoryUI" type="PanelContainer" parent="CanvasLayer"]
visible = false
custom_minimum_size = Vector2(72, 55)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -141.0
offset_top = -226.0
offset_right = -41.0
offset_bottom = -171.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2, 2)
script = ExtResource("8_bruh7")

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/InventoryUI"]
layout_mode = 2
texture = ExtResource("9_bruh7")

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/InventoryUI/NinePatchRect"]
layout_mode = 0
offset_left = 6.27139
offset_top = 3.0
offset_right = 46.2714
offset_bottom = 43.0
scale = Vector2(0.5, 0.5)
columns = 3

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="SHOUT" to="." method="_on_shout_body_entered"]
[connection signal="body_exited" from="SHOUT" to="." method="_on_shout_body_exited"]
[connection signal="area_entered" from="INV" to="INV" method="_on_area_entered"]
[connection signal="item_added" from="INV" to="CanvasLayer/InventoryUI" method="_on_inv_item_added"]
[connection signal="item_consumed" from="INV" to="CanvasLayer/InventoryUI" method="_on_inv_item_consumed"]
[connection signal="body_entered" from="Area_L&R" to="." method="_on_area_lr_body_entered"]
[connection signal="body_exited" from="Area_L&R" to="." method="_on_area_lr_body_exited"]
[connection signal="body_entered" from="Area_U&D" to="." method="_on_area_ud_body_entered"]
[connection signal="body_exited" from="Area_U&D" to="." method="_on_area_ud_body_exited"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="timeout" from="ShoutCooldown" to="." method="_on_shout_cooldown_timeout"]
[connection signal="inventory_item_ui_selected" from="CanvasLayer/InventoryUI" to="INV" method="_on_inventory_ui_inventory_item_ui_selected"]
